@@ -1,101 +1,69 @@
 package br.com.bookon.loan.services;
 
 import br.com.bookon.loan.enums.LoanStatusEnum;
+import br.com.bookon.loan.exceptions.LoanNotFoundException;
 import br.com.bookon.loan.models.Loan;
-import br.com.bookon.loan.payloads.mappers.LoanMapper;
 import br.com.bookon.loan.payloads.request.LoanRequest;
-import br.com.bookon.loan.payloads.response.BookResponse;
 import br.com.bookon.loan.payloads.response.LoanResponse;
-import br.com.bookon.loan.payloads.response.UserResponse;
 import br.com.bookon.loan.repositories.LoanRepository;
+import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.mongodb.core.MongoTemplate;
-import org.springframework.data.mongodb.core.query.Criteria;
-import org.springframework.data.mongodb.core.query.Query;
-import org.springframework.data.mongodb.core.query.Update;
 import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class LoanService {
 
-    @Autowired
-    private LoanRepository loanRepository;
+    private final LoanRepository loanRepository;
+
+    private final WebClient webClient;
 
     @Autowired
-    private MongoTemplate mongoTemplate;
-
-    @Autowired
-    private LoanMapper loanMapper;
-
-    @Autowired
-    private WebClient webClient;
+    public LoanService(LoanRepository loanRepository, WebClient webClient) {
+        this.loanRepository = loanRepository;
+        this.webClient = webClient;
+    }
 
     public Loan save(Loan loan) {
         return loanRepository.save(loan);
     }
 
-    public List<LoanResponse> getAllLoans() {
-        List<Loan> loans = loanRepository.findAll();
+    public List<LoanResponse> getLoanByBorrowerId(Integer borrowerId) {
+        List<Loan> loans = loanRepository.findByBorrowerIdAndStatus(borrowerId, LoanStatusEnum.PENDING);
         return loans.stream()
-                .map(loanMapper::convertToLoanResponse)
-                .collect(Collectors.toList());
-    }
-
-    public LoanResponse getLoanById(String id) {
-        Loan loan = loanRepository.findById(id).orElse(null);
-        return loanMapper.convertToLoanResponse(loan);
-    }
-
-    public boolean deleteLoan(String id) {
-        if (loanRepository.existsById(id)) {
-            loanRepository.deleteById(id);
-            return true;
-        } else {
-            return false;
-        }
+                .map(this::convertToLoanResponse)
+                .toList();
     }
 
     public LoanResponse createPropose(LoanRequest loanRequest, Integer borrowerId) {
-        UserResponse borrower = webClient.get().uri("http://localhost:/8082/api/users").retrieve().bodyToMono(UserResponse.class).block();
-        UserResponse lender = webClient.get().uri("http://localhost:/8082/api/users").retrieve().bodyToMono(UserResponse.class).block();
-
-        BookResponse book = webClient.get().uri("http://localhost:/8083/api/books/{}").retrieve().bodyToMono(BookResponse.class).block();
+        boolean borrowerExist = Boolean.TRUE.equals(webClient.get().uri("http://localhost:/8082/api/users").retrieve().bodyToMono(boolean.class).block());
+        boolean lenderExist = Boolean.TRUE.equals(webClient.get().uri("http://localhost:/8082/api/users").retrieve().bodyToMono(boolean.class).block());
+        boolean bookExist = Boolean.TRUE.equals(webClient.get().uri("http://localhost:/8083/api/books/{}").retrieve().bodyToMono(boolean.class).block());
 
         var loan = new Loan();
-        loan.setBorrower(borrower);
-        loan.setLender(lender);
-        loan.setBook(book);
-        loan.setReturnDate(null);
-        loan.setStatus(LoanStatusEnum.PENDING);
-        return loanMapper.convertToLoanResponse(save(loan));
+        BeanUtils.copyProperties(loanRequest, loan);
+        return convertToLoanResponse(save(loan));
     }
 
     public List<LoanResponse> listProposes(Long lenderId) {
         List<Loan> loans = loanRepository.findByLenderIdAndStatus(lenderId, LoanStatusEnum.PENDING);
-
         return loans.stream()
-                .map(loanMapper::convertToLoanResponse)
-                .collect(Collectors.toList());
+                .map(this::convertToLoanResponse)
+                .toList();
     }
 
-    public void approvePropose(String loanId, Long lenderUserId) {
-        if (loanNotExists(loanId,lenderUserId)) {
-            return;
-        }
-        updateLoanStatusForApproved(loanId);
+    public void changePropose(String loanId, Integer lenderId,LoanStatusEnum loanStatusEnum) {
+        Loan existLoan = loanRepository.findByLoanIdAndLenderId(loanId, lenderId).orElseThrow(LoanNotFoundException::new);
+        existLoan.setStatus(loanStatusEnum);
+        save(existLoan);
     }
 
-    private boolean loanNotExists(String loanId, Long lenderUserId) {
-        return !loanRepository.existsByIdAndLenderId(loanId, lenderUserId);
+    private LoanResponse convertToLoanResponse(Loan loan) {
+        var loanResponse = new LoanResponse();
+        BeanUtils.copyProperties(loan, loanResponse);
+        return loanResponse;
     }
 
-    private void updateLoanStatusForApproved(String loanId) {
-        Query query = new Query(Criteria.where("_id").is(loanId));
-        Update update = new Update().set("status", LoanStatusEnum.APPROVED);
-        mongoTemplate.updateFirst(query, update, Loan.class);
-    }
 }
